syntax = "proto3";

package common.asset_transfer;

option java_package = "com.weaver.protos.common.asset_transfer";
option go_package = "github.com/hyperledger-labs/weaver-dlt-interoperability/common/protos-go/common";

message AssetPledge {
	bytes assetDetails = 1;
	string localNetworkID = 2;
	string remoteNetworkID = 3;
	string recipient = 4;
	uint64 expiryTimeSecs = 5;
}

message AssetClaimStatus {
	bytes assetDetails = 1;
	string localNetworkID = 2;
	string remoteNetworkID = 3;
	string recipient = 4;
	bool claimStatus = 5;
	uint64 expiryTimeSecs = 6;
	bool expirationStatus = 7;
}
